--- a/src/containers/Main/Main.css
+++ b/src/containers/Main/Main.css
@@ -16,6 +16,6 @@
   }
 
   .button-section {
-    height: 10vh;
-    padding: 1em 2em;
+    bottom: 0px;
+    padding: 1.2em 2.5em;
   }
